[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itol_configs"
authors = [{name = "Jody Phelan", email = "jody.phelan@lshtm.ac.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.optional-dependencies]
docs = [
    "mkdocs >=1.0.4",
    "mkdocstrings[python]",
    "mkdocs-material >=4.6.3",
]

[project.scripts]
itol-configs = "itol_configs:cli"